--- a/src/app/view/achat/achat/achat-item-search/achat-item-search.component.html
+++ b/src/app/view/achat/achat/achat-item-search/achat-item-search.component.html
@@ -34,7 +34,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let ebp of ebpListFilter">
+                    <tr *ngFor="let ebp of achatItemListFilter">
                         <td>{{ebp.produit.libelle}}</td>
                         <td>{{ebp.produit.cat.libelle}}</td>
                         <td>{{ebp.qteCommander}}</td>
