--- a/src/app/view/dashboard/stuf-dash-board/stuf-dash-board.component.html
+++ b/src/app/view/dashboard/stuf-dash-board/stuf-dash-board.component.html
@@ -1,13 +1,30 @@
 <!-- Page Content -->
 <div id="page-content-wrapper">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom mb-3">
-        <span>
-            <h2 style="color: white;">Stuf Dashboard</h2>
-        </span>
+    <nav id="navbar-example2" class="navbar navbar-light bg-dark text-white mb-3">
+        <a class="navbar-brand">
+            <img src="assets/images/i1.png" width="30" height="30" class="d-inline-block align-top rounded mr-1">
+            <h4 style="display: inline; color: white;"> Responsable DashBoard</h4>
+        </a>
+        <ul class="nav nav-pills">
+            <li class="nav-item">
+                <h4 class="nav-link">
+                    <div class="dropdown">
+                        <button class="btn btn-info btn-xl btn-circle btn-lg fa fa-user" data-toggle="dropdown">
+                        </button>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu2">
+                            <app-user-profile [userName]="user_name"></app-user-profile>
+                        </div>
+                    </div>
+                </h4>
+            </li>
+        </ul>
     </nav>
-    <div class="container">
+    <div *ngIf="loading" class="d-flex align-items-center m-3">
+        <strong>Loading...</strong>
+        <div class="spinner-border ml-auto" role="status" aria-hidden="true"></div>
+    </div>
+    <div class="container-fluid" style="margin-bottom: 120px;">
         <router-outlet></router-outlet>
     </div>
+    <app-alert class="fixed-bottom"></app-alert>
 </div>
-<!-- /#page-content-wrapper -->
-<!-- /#wrapper -->
