--- a/src/app/view/eb/eb-create/eb-create.component.html
+++ b/src/app/view/eb/eb-create/eb-create.component.html
@@ -1,38 +1,89 @@
 <div class="container-fluid">
-    <div class="card mb-3">
-        <div class="card-body">
-            <h4 style="display: inline;">Expression Du Besoin</h4>
-            <button (click)="onShowEbsClick()" style="float: right;" type="button" class="btn btn-success">Voir Votre
-                List Des Expression</button>
-        </div>
-    </div>
     <div class="row">
-        <div class="col-md-5" style="height: 60rem">
-            <div class="form-group input-group">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">Titre</span>
+        <!--Eb Form-->
+        <div class="col-md-8 shadow rounded bg-dark mb-2" id="eb-form">
+            <div class="row mt-2">
+                <div class="col-md-12 mb-3 text-white">
+                    <h4 style="display: inline;">Crée Une Nouvelle Expression Du Besoin</h4>
                 </div>
-                <input [(ngModel)]=eb.title name="" class="form-control mr-sm-2" placeholder="Titre Du Demande" type="text">
             </div>
-            <div class="form-group input-group">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">Descreption</span>
+            <div class="row mt-2">
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="form-group">
+                                <label>Titre</label>
+                                <input [(ngModel)]=eb.title class="form-control" placeholder="TitreExample..." type="text">
+                            </div>
+
+                            <div class="form-group">
+                                <label>Descreption</label>
+                                <textarea [(ngModel)]=eb.eb_desc class="form-control" placeholder="MyDescreption..." type="text"></textarea>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <input [(ngModel)]=eb.eb_desc name="" class="form-control  mr-sm-2" placeholder="Ajouter Une Descreption" type="text">
+                <div class="col-md-12 mt-2 mb-2">
+                    <app-ebp-list-current></app-ebp-list-current>
+                    <button style="float: right;" (click)="onSaveEb()" [disabled]="!ebValidation(eb.title)" type="submit" class="btn btn-success mt-2">Save</button>
+                </div>
+            </div>
+        </div>
+
+        <!--Eb List-->
+        <div class="col-md-4">
+            <span type="button" class="btn btn-secondary text-white inline">
+                <span class="badge badge-light">{{ebListFiltered.length}}</span> Expression
+            </span>
+            <a (click)="onShowEbsClick()" style="float: right;" type="button" class="btn btn-secondary text-white inline float-right">Voir
+                La List Detaile  <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+
+            <div class="input-group mb-3 mt-2">
+                <div class="input-group-prepend">
+                    <span class="input-group-text rounded bg-dark text-white fa fa-search"></span>
+                </div>
+                <input placeholder="search by eb title..." id="key" type="text" class="form-control bg-secondary text-white" [(ngModel)]=title (keyup)="onFilterAction()">
+                <div class="input-group-prepend ml-1">
+                    <span (click)="sortByCreatedDate()" class="input-group-text bg-dark text-white rounded fa fa-sort"></span>
+                </div>
             </div>
 
-            <app-ebp-form></app-ebp-form>
+            <span *ngIf="ebListFiltered.length==0">
+                No Match.
+            </span>
 
+            <div class="card bg-dark text-white shadow mt-2" *ngFor="let eb of ebListFiltered">
+                <div class="card-body">
+                    <h4 class="card-title">{{eb.title}}</h4>
+                    <p class="card-text">{{eb.eb_desc}}</p>
+                    <p class="card-text float-right">{{eb.saveDate}}</p>
+                </div>
+                <div class="card-footer">
+                    <button (click)="setEbPdate(eb)" data-toggle="modal" data-target="#eb" class="btn btn-success">Edit</button>
+                </div>
 
-
-
+            </div>
 
         </div>
-        <div class="col-md-7 mt-2" style="height: 60rem">
-            <app-ebp-list-current></app-ebp-list-current>
-            <button style="float: right;" (click)="onSaveEb()" [disabled]="!ebValidation(eb.title)" type="submit" class="btn btn-primary mt-2">Submit</button>
-        </div>
-
     </div>
+</div>
 
+<!--Eb Edit PopUp-->
+<div class="modal fade bd-example-modal-lg" id="eb" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">{{ebUpdate.title}}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <app-eb-edit></app-eb-edit>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+    </div>
 </div>
