--- a/src/app/view/eb/eb-create/ebp-form/ebp-form.component.html
+++ b/src/app/view/eb/eb-create/ebp-form/ebp-form.component.html
@@ -1,50 +1,44 @@
 <div class="card shadow bg-dark text-white">
     <div class="card-header">
-        Ajouter Un Produit
-        <button data-toggle="modal" data-target="#modal-produit" type="button" class="btn btn-primary"><i class="fa fa-plus-circle" aria-hidden="true"></i> Add New Product</button>
+        Ajouter Un Besoin
+        <button data-toggle="modal" data-target="#modal-produit" type="button" class="btn btn-primary float-right"><i
+                class="fa fa-plus-circle" aria-hidden="true"></i> Add New Product</button>
     </div>
     <div class="card-body">
 
         <div class="form-group">
             <label for="cat">Catégorie</label>
             <select class="form-control" id="cat" [(ngModel)]="catLib" (change)="getProductBycat()">
-                    <option *ngFor="let cat of cats" value="{{cat.libelle}}">
-                        {{cat.libelle}}
-                    </option>
-                </select>
+                <option *ngFor="let cat of cats" value="{{cat.libelle}}">
+                    {{cat.libelle}}
+                </option>
+            </select>
         </div>
-
-        <!-- form-group// -->
 
         <div class="form-group">
             <label for="cat">Produits</label>
             <select class="form-control" id="cat" [(ngModel)]="ebp.produit.libelle">
-                    <option *ngFor="let produit of products" value="{{produit.libelle}}">
-                        {{produit.libelle}}
-                    </option>
-                </select>
+                <option *ngFor="let produit of products" value="{{produit.libelle}}">
+                    {{produit.libelle}}
+                </option>
+            </select>
         </div>
 
-        <!-- form-group// -->
 
-        <div class="form-group input-group">
-            <div class="input-group-prepend">
-                <span class="input-group-text"><i class="fa fa-shopping-basket" aria-hidden="true"></i></span>
-            </div>
-            <input min="0" [(ngModel)]=ebp.qteDemande name="" class="form-control" placeholder="Quantiter Demander" type="number">
+        <div class="form-group">
+            <label>Quantité</label>
+            <input min="1" [(ngModel)]=ebp.qteDemande class="form-control" placeholder="Quantiter Demander" type="number">
         </div>
-        <!-- form-group// -->
 
-        <div class="form-group input-group">
-            <div class="input-group-prepend">
-                <span class="input-group-text"><i class="fa fa-commenting" aria-hidden="true"></i> </span>
-            </div>
+        <div class="form-group">
+            <label>Description</label>
             <textarea [(ngModel)]=ebp.product_desc name="" class="form-control" placeholder="Descreption" type="text"></textarea>
         </div>
-        <!-- form-group// -->
     </div>
+
     <div class="card-footer text-muted">
-        <button [disabled]="!ebpValidation(ebp.produit.libelle,ebp.qteDemande)" (click)="onProductAdd()" style="float: right;" type="button" class="btn btn-outline-primary"><i class="fa fa-plus" aria-hidden="true"></i></button>
+        <button [disabled]="!ebpValidation(ebp.produit.libelle,ebp.qteDemande)" (click)="onProductAdd()" style="float: right;" type="button" class="btn btn-outline-primary"><i class="fa fa-plus"
+                aria-hidden="true"></i></button>
     </div>
 
 </div>
