--- a/src/app/view/eb/eb-create/ebp-list-current/ebp-list-current.component.html
+++ b/src/app/view/eb/eb-create/ebp-list-current/ebp-list-current.component.html
@@ -1,21 +1,22 @@
-<div class="shadow card bg-dark text-white">
+<div class="shadow card">
     <div class="card-header">
-        Produit
+        <h4 style="display: inline;">Les Besoins</h4>
+        <button data-toggle="modal" data-target="#modal-b" type="button" class="btn btn-primary float-right"><i
+            class="fa fa-plus-circle" aria-hidden="true"></i></button>
     </div>
     <div class="card-body">
-        <table class="table table-dark">
-            <thead class="thead-inverse">
+        <table class="table table-hover table-bordered">
+            <thead>
                 <tr>
                     <th>Produit</th>
                     <th>Quantite</th>
                     <th>Description</th>
-                    <th>Action</th>
                 </tr>
             </thead>
             <tbody>
                 <tr *ngIf="ebpListCurrent.length==0">
                     <td colspan="4" role="alert">
-                        No data to display.
+                        Table Is Empty !
                     </td>
                 </tr>
                 <tr *ngFor="let ebp of ebpListCurrent">
@@ -27,5 +28,23 @@
                 </tr>
             </tbody>
         </table>
+    </div>
+</div>
+<div class="modal fade bd-example-modal-lg" id="modal-b" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Nouvelle Besoin</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <app-ebp-form></app-ebp-form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+            </div>
+        </div>
     </div>
 </div>
