--- a/src/app/view/eb/eb-list/eb-list-chef/eb-list-chef.component.html
+++ b/src/app/view/eb/eb-list/eb-list-chef/eb-list-chef.component.html
@@ -1,4 +1,6 @@
 <h2>List De Tout Les Expression Des Besoin</h2>
+
+<!--List-->
 <div class="card text-white bg-dark shadow mt-3 mb-3">
     <div class="card-header">
         <div class="container">
@@ -35,7 +37,8 @@
 
                 <div class="col-md-3">
                     <div class="form-group">
-                        <label for="sort">Sort By <i class="fa fa-sort mr-1" (click)="onSortAction()" aria-hidden="true"></i></label>
+                        <label for="sort">Sort By <i class="fa fa-sort mr-1" (click)="onSortAction()"
+                                aria-hidden="true"></i></label>
 
                         <select class="form-control" id="sort" [(ngModel)]=sortBy (change)="onSortAction()">
                             <option selected></option>
@@ -80,16 +83,20 @@
             </tbody>
         </table>
         <ul class="pagination justify-content-center" style="margin:20px 0">
-            <li class="page-item"><a (click)="setPage(page-1,$event)" class="page-link"><i style="color: rgb(37, 37, 37);" class="fa fa-arrow-left " aria-hidden="true"></i></a></li>
+            <li class="page-item"><a (click)="setPage(page-1,$event)" class="page-link"><i
+                        style="color: rgb(37, 37, 37);" class="fa fa-arrow-left " aria-hidden="true"></i></a></li>
             <li class="page-item" *ngFor="let p of pages; let i=index" [ngClass]="{'active':i==page}">
                 <a (click)="setPage(i,$event)" class="page-link" href="">{{i}}</a>
             </li>
-            <li class="page-item"><a (click)="setPage(page+1,$event)" class="page-link"><i style="color: rgb(37, 37, 37);" class="fa fa-arrow-right " aria-hidden="true"></i></a></li>
+            <li class="page-item"><a (click)="setPage(page+1,$event)" class="page-link"><i
+                        style="color: rgb(37, 37, 37);" class="fa fa-arrow-right " aria-hidden="true"></i></a></li>
 
         </ul>
     </div>
 
 </div>
+
+<!--List Items-->
 
 <div class="modal fade bd-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
@@ -100,8 +107,8 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
-                <table class="table table-light table-bordered table-hover">
+            <div class="modal-body table-responsive">
+                <table class="table table-dark table-bordered table-hover">
                     <thead>
                         <tr>
                             <th>Produit</th>
@@ -122,9 +129,11 @@
                             <td>{{ebp.produit.libelle}}</td>
                             <td>{{ebp.product_desc}}</td>
                             <td>{{ebp.besoin_statut}}</td>
-                            <td><input [min]=1 type="number" [(ngModel)]=ebp.qteDemande class="form-control col-xs-2">
+                            <td>
+                                <input [min]=1 type="number" [(ngModel)]=ebp.qteDemande class="form-control">
                             </td>
-                            <td><input min="1" [max]="ebp.qteDemande" [disabled]="ebp.besoin_statut!=statuts[0]" type="number" [(ngModel)]=ebp.qteAccorde class="form-control"></td>
+                            <td>
+                                <input [min]=1 [max]="ebp.qteDemande" [disabled]="ebp.besoin_statut!=statuts[0]" type="number" [(ngModel)]=ebp.qteAccorde class="form-control"></td>
                             <td>
                                 <div>
                                     <input #a type="radio" [name]="ebp.id" [value]="statuts[0]" id="accorder" [(ngModel)]=ebp.besoin_statut>
