--- a/src/app/view/login-form/login-form.component.html
+++ b/src/app/view/login-form/login-form.component.html
@@ -1,32 +1,57 @@
-<div class="container">
-    <div class="alert alert-danger mb-2 mt-2" [hidden]=!bad_credentials>
-        Bad credentials, Please Try Again
-    </div>
-    <div class="d-flex justify-content-center h-100">
-        <div class="card bg-dark text-white shadow mt-3">
-            <div class="card-header">
-                <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS5e8yCJ7ff3qCqIP8qtG7wnOHNdsydSsg2RmCf1P3JzDL_B7s5&usqp=CAU" alt="Card image" style="width:100%">
+<div class="container-fluid">
+    <div class="card bg-dark text-white shadow mt-3" style="width: 360px;">
+        <span class="alert alert-danger m-2" *ngIf="bad_credentials">
+            <button (click)="bad_credentials=false" type="button" class="close" data-dismiss="alert">&times;</button>
+            Bad credentials, Please Try Again
+        </span>
+        <div class="card-header">
+            <img class="card-img-top" style="width: 100%;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS5e8yCJ7ff3qCqIP8qtG7wnOHNdsydSsg2RmCf1P3JzDL_B7s5&usqp=CAU" alt="Card image">
+        </div>
+
+        <div class="card-body">
+            <div class="input-group mb-3">
+                <div class="input-group-append">
+                    <span class="input-group-text fa fa-user"></span>
+                </div>
+                <input [(ngModel)]=request.userName #name="ngModel" pattern="^[a-zA-Z\d]*$" minlength="4" required type="text" name="" class="form-control" value="" placeholder="username">
+            </div>
+            <div *ngIf="name.invalid && name.touched" class="alert alert-danger mb-3">
+
+                <span *ngIf="name.errors.required">
+                    Name is required.
+                </span>
+                <span *ngIf="name.errors.minlength">
+                    Name must be at least 4 characters long.
+                </span>
+                <div *ngIf="name.errors.pattern">
+                    Invalid User Name
+                </div>
+
+            </div>
+            <div class="input-group mb-2">
+                <div class="input-group-append">
+                    <span class="input-group-text fa fa-unlock-alt"></span>
+                </div>
+                <input [(ngModel)]=request.password #password="ngModel" pattern="^[#\w@_-]{8,12}$" required type="password" minlength="8" name="" class="form-control" value="" placeholder="password">
+
+            </div>
+            <div *ngIf="password.invalid && password.touched" class="alert alert-danger mb-3">
+                <span *ngIf="password.errors.pattern">
+                    Invalid User Password
+                </span>
+                <span *ngIf="password.errors.required">
+                    Password is required.
+                </span>
+                <span *ngIf="password.errors.minlength">
+                    Name must be at least 4 characters long.
+                </span>
+
             </div>
 
-            <div class="card-body">
-                <div class="input-group mb-3">
-                    <div class="input-group-append">
-                        <span class="input-group-text"><i class="fa fa-user"></i></span>
-                    </div>
-                    <input [(ngModel)]=request.userName type="text" name="" class="form-control input_user" value="" placeholder="username">
-                </div>
-                <div class="input-group mb-2">
-                    <div class="input-group-append">
-                        <span class="input-group-text"><i class="fa fa-key"></i></span>
-                    </div>
-                    <input [(ngModel)]=request.password type="password" name="" class="form-control input_pass" value="" placeholder="password">
-                </div>
-
-            </div>
-            <div class="card-footer text-muted">
-                <div [hidden]="hide_spinner" class="spinner-border text-success float-left"></div>
-                <button (click)="doLogin()" type="button" class="btn btn-success float-right">Log In</button>
-            </div>
+        </div>
+        <div class="card-footer text-muted">
+            <div [hidden]="hide_spinner" class="spinner-border text-success float-left"></div>
+            <button [disabled]="name.invalid && (name.dirty || name.touched) || password.invalid && (password.dirty || password.touched)" (click)="doLogin()" type="button" class="btn btn-success float-right">Log In</button>
         </div>
     </div>
 </div>
