--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
+    /*background-color: rgb(78, 78, 78);
+    color: #e4e4e4;*/
     overflow-x: hidden;
+}
+
+.btn-circle.btn-xl {
+    width: 40px;
+    height: 40px;
+    padding: 5px;
+    border-radius: 35px;
+    font-size: 24px;
+    line-height: 1.33;
+}
+
+.btn-circle {
+    width: 30px;
+    height: 30px;
+    padding: 6px 0px;
+    border-radius: 15px;
+    text-align: center;
+    font-size: 12px;
+    line-height: 1.42857;
+}
+
+.dropdown-menu {
+    width: 300px !important;
+    height: 400px !important;
 }
 
 .dashboard-items {
