--- a/src/app/view/dashboard/chef-dash-board/chef-dash-board.component.html
+++ b/src/app/view/dashboard/chef-dash-board/chef-dash-board.component.html
@@ -95,7 +95,7 @@
         <nav id="navbar-example2" class="navbar navbar-light bg-dark text-white mb-3">
             <a class="navbar-brand">
                 <button class="btn btn-info" id="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></button>
-                <h4 style="display: inline; color: white;"> Comptable DashBoard</h4>
+                <h4 style="display: inline; color: white;"> Chef DashBoard</h4>
             </a>
             <ul class="nav nav-pills">
                 <li class="nav-item">
