--- a/src/app/view/dashboard/comptable-dash-board/comptable-dash-board.component.html
+++ b/src/app/view/dashboard/comptable-dash-board/comptable-dash-board.component.html
@@ -7,6 +7,9 @@
         <hr style="color: white;">
         <div class="list-group list-group-flush" id="accordion">
 
+            <a [routerLink]="['profile']" style="color: rgb(14, 13, 13);" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapseeb">
+                Profile 
+            </a>
             <!--Expression-->
             <a style="color: rgb(14, 13, 13);" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapseeb">
                 Besoins <i style="float: right; bottom: 0;" class="fa fa-angle-down" aria-hidden="true"></i>
@@ -113,10 +116,6 @@
                 </li>
             </ul>
         </nav>
-        <div *ngIf="loading" class="d-flex align-items-center m-3">
-            <strong>Loading...</strong>
-            <div class="spinner-border ml-auto" role="status" aria-hidden="true"></div>
-        </div>
         <div class="container-fluid" style="margin-bottom: 120px;">
             <router-outlet></router-outlet>
         </div>
